--- a/style.css
+++ b/style.css
@@ -27,7 +27,10 @@ button{
 }
 button:hover{
     font-size: large;
+    background-color: rgb(36, 36, 36);
+    color: white;
 }
+
 a{
     display: block;
 }
